--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
@@ -167,7 +167,7 @@
       <Filter>Source\Debugging</Filter>
     </ClInclude>
     <ClInclude Include="IntVector4.h">
-      <Filter>Source</Filter>
+      <Filter>Source\Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
