--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="Engine\Application.h" />
     <ClInclude Include="Engine\IntVector2.h" />
     <ClInclude Include="Engine\IntVector3.h" />
+    <ClInclude Include="Engine\IntVector4.h" />
     <ClInclude Include="Engine\Math\MathUtility.h" />
     <ClInclude Include="Engine\Math\Matrices\GenericMatrix.h" />
     <ClInclude Include="Engine\Math\Vectors\DoubleVector2.h" />
@@ -190,7 +191,6 @@
     <ClInclude Include="Exceptions\OutOfRangeException.h" />
     <ClInclude Include="Input\Input.h" />
     <ClInclude Include="Input\Key.h" />
-    <ClInclude Include="IntVector4.h" />
     <ClInclude Include="Structs\Color.h" />
     <ClInclude Include="Time\Time.h" />
     <ClInclude Include="Windows\GameWindow.h" />
