--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -2,9 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Math\TypedVectorTests.cpp">
-      <Filter>Math</Filter>
-    </ClCompile>
     <ClCompile Include="Math\Vector2Tests.cpp">
       <Filter>Math</Filter>
     </ClCompile>
@@ -15,6 +12,9 @@
       <Filter>Math</Filter>
     </ClCompile>
     <ClCompile Include="Math\ArbitraryVector.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Math\TypedFloatingPointVectorTests.cpp">
       <Filter>Math</Filter>
     </ClCompile>
   </ItemGroup>
