--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <ClCompile Include="Math\ArbitraryVector.cpp" />
     <ClCompile Include="Math\TypedFloatingPointVectorTests.cpp" />
+    <ClCompile Include="Math\TypedGenericVectorTests.cpp" />
     <ClCompile Include="Math\Vector2Tests.cpp" />
     <ClCompile Include="Math\Vector3Tests.cpp" />
     <ClCompile Include="Math\Vector4Tests.cpp" />
