--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="Math\IntVector2Tests.cpp" />
     <ClCompile Include="Math\IntVector3Tests.cpp" />
     <ClCompile Include="Math\IntVector4Tests.cpp" />
+    <ClCompile Include="Math\MatrixTests.cpp" />
     <ClCompile Include="Math\TypedFloatingPointVectorTests.cpp" />
     <ClCompile Include="Math\TypedGenericVectorTests.cpp" />
     <ClCompile Include="Math\TypedIntegerVectorTests.cpp" />
