--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -34,6 +34,7 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Utility\Comparison\ComparisonUtility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Math\ArbitraryVector.cpp" />
