Renamed Math folder to Maths

--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -167,19 +167,19 @@
     <ClInclude Include="Engine\IntVector2.h" />
     <ClInclude Include="Engine\IntVector3.h" />
     <ClInclude Include="Engine\IntVector4.h" />
-    <ClInclude Include="Engine\Math\MathUtility.h" />
-    <ClInclude Include="Engine\Math\Matrices\GenericMatrix.h" />
-    <ClInclude Include="Engine\Math\Vectors\DoubleVector2.h" />
-    <ClInclude Include="Engine\Math\Vectors\DoubleVector3.h" />
-    <ClInclude Include="Engine\Math\Vectors\DoubleVector4.h" />
-    <ClInclude Include="Engine\Math\Vectors\FloatVector2.h" />
-    <ClInclude Include="Engine\Math\Vectors\FloatVector3.h" />
-    <ClInclude Include="Engine\Math\Vectors\FloatVector4.h" />
-    <ClInclude Include="Engine\Math\Vectors\MatrixBase.h" />
-    <ClInclude Include="Engine\Math\Vectors\Vector2Base.h" />
-    <ClInclude Include="Engine\Math\Vectors\Vector3Base.h" />
-    <ClInclude Include="Engine\Math\Vectors\Vector4Base.h" />
-    <ClInclude Include="Engine\Math\Vectors\VectorBase.h" />
+    <ClInclude Include="Engine\Maths\MathUtility.h" />
+    <ClInclude Include="Engine\Maths\Matrices\GenericMatrix.h" />
+    <ClInclude Include="Engine\Maths\Vectors\DoubleVector2.h" />
+    <ClInclude Include="Engine\Maths\Vectors\DoubleVector3.h" />
+    <ClInclude Include="Engine\Maths\Vectors\DoubleVector4.h" />
+    <ClInclude Include="Engine\Maths\Vectors\FloatVector2.h" />
+    <ClInclude Include="Engine\Maths\Vectors\FloatVector3.h" />
+    <ClInclude Include="Engine\Maths\Vectors\FloatVector4.h" />
+    <ClInclude Include="Engine\Maths\Vectors\MatrixBase.h" />
+    <ClInclude Include="Engine\Maths\Vectors\Vector2Base.h" />
+    <ClInclude Include="Engine\Maths\Vectors\Vector3Base.h" />
+    <ClInclude Include="Engine\Maths\Vectors\Vector4Base.h" />
+    <ClInclude Include="Engine\Maths\Vectors\VectorBase.h" />
     <ClInclude Include="Engine\Quaternion.h" />
     <ClInclude Include="Engine\Vector2.h" />
     <ClInclude Include="Engine\Vector3.h" />
@@ -207,7 +207,8 @@
     <ClCompile Include="Direct X\SwapChain.cpp" />
     <ClCompile Include="Direct X\Texture2D.cpp" />
     <ClCompile Include="Engine\Application.cpp" />
-    <ClCompile Include="Engine\Math\Vectors\MatrixBase.cpp" />
+    <ClCompile Include="Engine\Maths\MathUtility.cpp" />
+    <ClCompile Include="Engine\Maths\Vectors\MatrixBase.cpp" />
     <ClCompile Include="Engine\Quaternion.cpp" />
     <ClCompile Include="Exceptions\Exception.cpp" />
     <ClCompile Include="Input\Input.cpp" />
