Added quaternion unit tests

--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="Math\IntVector3Tests.cpp" />
     <ClCompile Include="Math\IntVector4Tests.cpp" />
     <ClCompile Include="Math\MatrixTests.cpp" />
+    <ClCompile Include="Math\QuaternionTests.cpp" />
     <ClCompile Include="Math\TypedFloatingPointVectorTests.cpp" />
     <ClCompile Include="Math\TypedGenericVectorTests.cpp" />
     <ClCompile Include="Math\TypedIntegerVectorTests.cpp" />
