--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Utility\Comparison\ComparisonUtility.h" />
     <ClInclude Include="Utility\Comparison\ComparisonUtilityMatrix.h" />
+    <ClInclude Include="Utility\Comparison\ComparisonUtilityQuaternions.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Math\ArbitraryVector.cpp" />
