--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -44,6 +44,7 @@
     <ClCompile Include="Math\IntVector2Tests.cpp" />
     <ClCompile Include="Math\IntVector3Tests.cpp" />
     <ClCompile Include="Math\IntVector4Tests.cpp" />
+    <ClCompile Include="Math\MathTests.cpp" />
     <ClCompile Include="Math\MatrixTests.cpp" />
     <ClCompile Include="Math\QuaternionTests.cpp" />
     <ClCompile Include="Math\TypedFloatingPointVectorTests.cpp" />
