--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -180,6 +180,10 @@
     <ClInclude Include="Engine\Maths\Vectors\Vector4Base.h" />
     <ClInclude Include="Engine\Maths\Vectors\VectorBase.h" />
     <ClInclude Include="Engine\Quaternion.h" />
+    <ClInclude Include="Engine\Rendering\IndexBuffer.h" />
+    <ClInclude Include="Engine\Rendering\Mesh.h" />
+    <ClInclude Include="Engine\Rendering\RenderingBuffer.h" />
+    <ClInclude Include="Engine\Rendering\VertexBuffer.h" />
     <ClInclude Include="Engine\Vector2.h" />
     <ClInclude Include="Engine\Vector3.h" />
     <ClInclude Include="Engine\Vector4.h" />
@@ -209,6 +213,7 @@
     <ClCompile Include="Engine\Application.cpp" />
     <ClCompile Include="Engine\Math.cpp" />
     <ClCompile Include="Engine\Quaternion.cpp" />
+    <ClCompile Include="Engine\Rendering\Mesh.cpp" />
     <ClCompile Include="Exceptions\Exception.cpp" />
     <ClCompile Include="Formatting\NumberFormatting.cpp" />
     <ClCompile Include="Input\Input.cpp" />
