--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
@@ -181,13 +181,13 @@
     <ClInclude Include="Engine\Rendering\Mesh.h">
       <Filter>Source\Engine\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Rendering\VertexBuffer.h">
+    <ClInclude Include="Engine\Rendering\VertexBufferData.h">
       <Filter>Source\Engine\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Rendering\IndexBuffer.h">
+    <ClInclude Include="Engine\Rendering\IndexBufferData.h">
       <Filter>Source\Engine\Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Rendering\RenderingBuffer.h">
+    <ClInclude Include="Engine\Rendering\RenderingBufferDataContainer.h">
       <Filter>Source\Engine\Rendering</Filter>
     </ClInclude>
   </ItemGroup>
