--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -166,6 +166,9 @@
     <ClInclude Include="Direct X\Texture2D.h" />
     <ClInclude Include="Direct X\VertexBuffer.h" />
     <ClInclude Include="Engine\Application.h" />
+    <ClInclude Include="Engine\ComponentHandler.h" />
+    <ClInclude Include="Engine\GameObject.h" />
+    <ClInclude Include="Engine\IComponent.h" />
     <ClInclude Include="Engine\IntVector2.h" />
     <ClInclude Include="Engine\IntVector3.h" />
     <ClInclude Include="Engine\IntVector4.h" />
@@ -216,6 +219,8 @@
     <ClCompile Include="Direct X\Texture2D.cpp" />
     <ClCompile Include="Direct X\VertexBuffer.cpp" />
     <ClCompile Include="Engine\Application.cpp" />
+    <ClCompile Include="Engine\ComponentHandler.cpp" />
+    <ClCompile Include="Engine\GameObject.cpp" />
     <ClCompile Include="Engine\Math.cpp" />
     <ClCompile Include="Engine\Quaternion.cpp" />
     <ClCompile Include="Engine\Rendering\Mesh.cpp" />
