--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -166,7 +166,7 @@
     <ClInclude Include="Direct X\Texture2D.h" />
     <ClInclude Include="Direct X\VertexBuffer.h" />
     <ClInclude Include="Engine\Application.h" />
-    <ClInclude Include="Engine\ComponentHandler.h" />
+    <ClInclude Include="Engine\ComponentContainer.h" />
     <ClInclude Include="Engine\GameObject.h" />
     <ClInclude Include="Engine\IComponent.h" />
     <ClInclude Include="Engine\IntVector2.h" />
@@ -219,7 +219,7 @@
     <ClCompile Include="Direct X\Texture2D.cpp" />
     <ClCompile Include="Direct X\VertexBuffer.cpp" />
     <ClCompile Include="Engine\Application.cpp" />
-    <ClCompile Include="Engine\ComponentHandler.cpp" />
+    <ClCompile Include="Engine\ComponentContainer.cpp" />
     <ClCompile Include="Engine\GameObject.cpp" />
     <ClCompile Include="Engine\Math.cpp" />
     <ClCompile Include="Engine\Quaternion.cpp" />
